--- a/www/index.html
+++ b/www/index.html
@@ -18,14 +18,14 @@
     <script src="lib/babel-polyfill/browser-polyfill.js"></script>
 
     <!-- Firebase -->
-    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
-
+    <script src="https://www.gstatic.com/firebasejs/3.0.5/firebase.js"></script>
     <!-- AngularFire -->
-    <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/accountController.js"></script>
     <script src="js/dashController.js"></script>
     <script src="js/mapController.js"></script>
     <script src="js/pinsController.js"></script>
@@ -41,6 +41,7 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
+
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
@@ -48,6 +49,16 @@
     -->
     <ion-nav-view></ion-nav-view>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqdnKiE3Z48MosGNE015UlO4kjg23dKf4&libraries=places">
+    </script>
+
+    <script>
+      var config = {
+        apiKey: "AIzaSyDroA4cCNvko84iVfc7mf_GNtqOOWeucIk",
+        authDomain: "plastic-bag-finder-1346.firebaseapp.com",
+        databaseURL: 'https://plastic-bag-finder-1346.firebaseio.com',
+        storageBucket: "plastic-bag-finder-1346.appspot.com"
+      };
+      firebase.initializeApp(config);
     </script>
   </body>
 </html>
