--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,6 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -33,7 +32,11 @@
     <script src="js/pinsController.js"></script>
     <script src="js/pinDetailController.js"></script>
     <script src="js/services.js"></script>
-
+    <script src="js/authFactory.js"></script>
+    <script src="js/connectivityMonitorService.js"></script>
+    <script src="js/googleMapsFactory.js"></script>
+    <script src="js/pinService.js"></script>
+    <script src="js/userService.js"></script>
   </head>
   <body ng-app="starter">
     <!--
@@ -50,8 +53,6 @@
       have templates inline in this html file if you'd like).
     -->
     <ion-nav-view></ion-nav-view>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqdnKiE3Z48MosGNE015UlO4kjg23dKf4&libraries=places">
-    </script>
 
     <script>
       var config = {
