--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/services.js"></script>
     <script src="js/authFactory.js"></script>
     <script src="js/connectivityMonitorService.js"></script>
+    <script src="js/googleMapsLoader.js"></script>
     <script src="js/googleMapsFactory.js"></script>
     <script src="js/pinService.js"></script>
     <script src="js/userService.js"></script>
