auth works on platform

--- a/www/index.html
+++ b/www/index.html
@@ -15,9 +15,10 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/ng-cordova-oauth/dist/ng-cordova-oauth.min.js"></script>
     <script src="cordova.js"></script>
-    <script src="lib/babel-polyfill/browser-polyfill.js"></script>
 
+    <script src="lib/babel-polyfill/browser-polyfill.js"></script>
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/3.0.5/firebase.js"></script>
     <!-- AngularFire -->
